Add and Fix Locales (FR)

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,4 +1,32 @@
 {
+    "NotifySystemWrong": "Merci de vérifier votre fichier Config.lua concernant la configuration des notifications !",
+
+    "titletorsomenu": "🧥 | Haut du corps",
+    "titlepantsmenu": "👖 | Bas du corps",
+    "titleshoesmenu": "👟 | Chaussures",
+    "titlemaskmenu": "😷 | Masques",
+    "titlehatsmenu": "🎩 | Chapeaux",
+    "titlebagsmenu": "🎒 | Sacs",
+    "titleglassesmenu": "👓 | Lunettes",
+    "titlevestmenu": "🧥 | Gilets",
+    "titleearaccessoriesmenu": "👂 | Accessoires d'oreilles",
+    "titlechainmenu": "🧣 | Chaînes / Écharpes",
+    "titlewatchmenu": "⌚ | Montres",
+    "titlebraceletmenu": "📿 | Bracelets",
+
+    "descriptiontorsomenu": "🧥 | Sélectionner pour retirer votre Haut",
+    "descriptionpantsmenu": "👖 | Sélectionner pour retirer votre Bas",
+    "descriptionshoesmenu": "👟 | Sélectionner pour retirer vos Chaussures",
+    "descriptionmaskmenu": "😷 | Sélectionner pour retirer votre Masque",
+    "descriptionhatsmenu": "🎩 | Sélectionner pour retirer votre Chapeau",
+    "descriptionbagsmenu": "🎒 | Sélectionner pour retirer votre Sac",
+    "descriptionglassesmenu": "👓 | Sélectionner pour retirer vos Lunettes",
+    "descriptionvestmenu": "🧥 | Sélectionner pour retirer votre Gilet",
+    "descriptionearaccessoriesmenu": "👂 | Sélectionner pour retirer vos Accessoires d'oreilles",
+    "descriptionchainmenu": "🧣 | Sélectionner pour retirer votre Chaîne / Écharpe",
+    "descriptionwatchmenu": "⌚ | Sélectionner pour retirer votre Montre",
+    "descriptionbraceletmenu": "📿 | Sélectionner pour retirer votre Bracelet",
+
     "removetorso": "🧥 | Retire le haut...",
     "removepants": "👖 | Retire le bas...",
     "removeshoes": "👟 | Retire les chaussures...",
@@ -9,19 +37,35 @@
     "removevest": "🧥 | Retire le gilet...",
     "removeearaccessories": "👂 | Retire les accessoires d'oreilles...",
     "removechain": "🧣 | Retire la chaîne / écharpe...",
-    "remonvewatch": "⌚ | Retire la montre...",
+    "removewatch": "⌚ | Retire la montre...",
     "removebracelet": "📿 | Retire le bracelet...",
 
-    "wearingtorso": "🧥 | Enfile le haut...",
-    "wearingpants": "👖 | Enfile le bas...",
-    "wearingshoes": "👟 | Enfile les chaussures...",
-    "wearingmask": "😷 | Enfile le masque...",
-    "wearinghats": "🎩 | Enfile le chapeau...",
-    "wearingbags": "🎒 | Enfile le sac...",
-    "wearingglasses": "👓 | Enfile les lunettes...",
-    "wearingvest": "🧥 | Enfile le gilet...",
-    "wearingearaccessories": "👂 | Enfile les accessoires d'oreilles...",
-    "wearingchain": "🧣 | Enfile la chaîne / écharpe...",
-    "wearingwatch": "⌚ | Enfile la montre...",
-    "wearingbracelet": "📿 | Enfile le bracelet..."
+    "weartorso": "🧥 | Enfile le haut...",
+    "wearpants": "👖 | Enfile le bas...",
+    "wearshoes": "👟 | Enfile les chaussures...",
+    "wearmask": "😷 | Enfile le masque...",
+    "wearhats": "🎩 | Enfile le chapeau...",
+    "wearbags": "🎒 | Enfile le sac...",
+    "wearglasses": "👓 | Enfile les lunettes...",
+    "wearvest": "🧥 | Enfile le gilet...",
+    "wearearaccessories": "👂 | Enfile les accessoires d'oreilles...",
+    "wearchain": "🧣 | Enfile la chaîne / écharpe...",
+    "wearwatch": "⌚ | Enfile la montre...",
+    "wearbracelet": "📿 | Enfile le bracelet...",
+
+    "alreadywearingsomething": "Vous portez déjà un vêtement ou vous avez le même vêtement",
+    "wronsexclothes": "Ceci n'est pas adapté a votre sexe",
+    "nothingontorso": "Vous ne portez rien sur le haut du corps",
+    "nothingonpants": "Vous ne portez rien sur le bas du corps",
+    "nothingonshoes": "Vous ne portez pas de chaussures",
+    "nothingonmask": "Vous ne portez pas de masque",
+    "nothingonhats": "Vous ne portez pas de chapeau",
+    "nothingonbags": "Vous ne portez pas de sac",
+    "nothingonglasses": "Vous ne portez pas de lunettes",
+    "nothingonvest": "Vous ne portez pas de gilet",
+    "nothingonearaccessories": "Vous ne portez pas d'accessoires d'oreilles",
+    "nothingonchain": "Vous ne portez pas de chaîne / écharpe",
+    "nothingonwatch": "Vous ne portez pas de montre",
+    "nothingonbracelet": "Vous ne portez pas de bracelet"
+
 }
